# riscvpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/riscvpp/core/: Register.h  cpu.h  instruction.h  register.h
src/core/: cpu.cpp
tests/core/: instruction_tests.cpp  register_tests.cpp
